# frozen-collections

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  Ideas.md  Ideas_and_Todos.md  LICENSE  README.md  TODO.md  Todos.md  bench.ps1  mutate.ps1  out.txt  rustfmt.toml  tables.toml  unstable-rustfmt.toml
benches/: Cargo.toml  frozen_map.rs  frozen_set.rs  hash_keys.rs  int_keys.rs  misc_keys.rs  ordered_keys.rs  scalar_keys.rs  string_keys.rs
codegen/: Cargo.toml  README.md  complex.rs  hash_keys.rs  hashed_keys.rs  int_keys.rs  misc_keys.rs  ordered_keys.rs  scalar_keys.rs  string_keys_length.rs  string_keys_subslice.rs  string_length.rs  string_slice.rs
codegen/examples/: hashed_keys.rs  ordered_keys.rs  scalar_keys.rs  string_keys_length.rs  string_keys_subslice.rs
codegen/tests/: hashed_keys.rs  ordered_keys.rs  scalar_keys.rs  string_keys_length.rs  string_keys_subslice.rs
examples/: Cargo.toml  frozen_map.rs  frozen_set.rs  hash_map.rs  hash_set.rs  ordered_map.rs  ordered_set.rs  scalar_map.rs  scalar_set.rs  string_map.rs  string_set.rs
frozen-collections/: Cargo.toml  README.md  build.rs
frozen-collections-core/: Cargo.toml  README.md
frozen-collections-core/src/: lib.rs  utils.rs
frozen-collections-core/src/analyzers/: duplicate_key_detector.rs  hash_code_analyzer.rs  int_key_analyzer.rs  mod.rs  scalar_key_analyzer.rs  sequence_key_analyzer.rs  slice_key_analyzer.rs
frozen-collections-core/src/doc_snippets/: about.md  contains.md  contains_key.md  contains_key_method.md  contains_method.md  get.md  get_disjoint_mut.md  get_disjoint_unchecked_mut.md  get_from_set.md  get_from_set_method.md  get_key_value.md  get_key_value_method.md  get_many_mut_method.md  get_method.md  get_mut.md  get_mut_method.md  hash_warning.md  into_keys.md  into_values.md  is_empty.md  iter.md  iter_mut.md  keys.md  len.md  order_warning.md  type_compat_warning.md  values.md  values_mut.md
frozen-collections-core/src/emit/: collection_emitter.rs  collection_entry.rs  generator.rs  mod.rs
frozen-collections-core/src/facade_maps/: facade_hash_map.rs  facade_ordered_map.rs  facade_scalar_map.rs  facade_string_map.rs  mod.rs
frozen-collections-core/src/facade_sets/: facade_hash_set.rs  facade_ordered_set.rs  facade_scalar_set.rs  facade_string_set.rs  mod.rs
frozen-collections-core/src/fz_maps/: fz_hash_map.rs  fz_ordered_map.rs  fz_scalar_map.rs  fz_string_map.rs  mod.rs
frozen-collections-core/src/fz_sets/: fz_hash_set.rs  fz_ordered_set.rs  fz_scalar_set.rs  fz_string_set.rs  mod.rs
frozen-collections-core/src/hash_tables/: decl_macros.rs  hash_table.rs  hash_table_slot.rs  inline_hash_table.rs  inline_hash_table_no_collisions.rs  mod.rs
frozen-collections-core/src/hashers/: bridge_hasher.rs  inline_left_range_hasher.rs  inline_right_range_hasher.rs  left_range_hasher.rs  length_hasher.rs  mixing_hasher.rs  mod.rs  passthrough_hasher.rs  right_range_hasher.rs  scalar_hasher.rs
frozen-collections-core/src/inline_maps/: inline_binary_search_map.rs  inline_dense_scalar_lookup_map.rs  inline_dense_sequence_lookup_map.rs  inline_eytzinger_search_map.rs  inline_hash_map.rs  inline_hash_map_no_collisions.rs  inline_hash_table.rs  inline_ordered_scan_map.rs  inline_scan_map.rs  inline_sparse_scalar_lookup_map.rs  inline_sparse_sequence_lookup_map.rs  mod.rs
frozen-collections-core/src/inline_sets/: inline_binary_search_set.rs  inline_dense_scalar_lookup_set.rs  inline_dense_sequence_lookup_set.rs  inline_eytzinger_search_set.rs  inline_hash_set.rs  inline_hash_set_no_collisions.rs  inline_ordered_scan_set.rs  inline_scan_set.rs  inline_sparse_scalar_lookup_set.rs  inline_sparse_sequence_lookup_set.rs  mod.rs
frozen-collections-core/src/macros/: analysis.rs  derive_scalar.rs  derive_scalar_macro.rs  derive_sequence.rs  frozen_map.rs  frozen_set.rs  generator.rs  hash_table.rs  key_type.rs  macro_api.rs  map_macros.rs  mod.rs  proc_macros.rs  processor.rs  set_macros.rs
frozen-collections-core/src/maps/: binary_search_map.rs  decl_macros.rs  dense_scalar_lookup_map.rs  dense_sequence_lookup_map.rs  eytzinger_search_map.rs  hash_map.rs  hash_table.rs  iterators.rs  map_tests.rs  mod.rs  ordered_scan_map.rs  scan_map.rs  sparse_scalar_lookup_map.rs  sparse_sequence_lookup_map.rs
frozen-collections-core/src/sets/: binary_search_set.rs  decl_macros.rs  dense_scalar_lookup_set.rs  dense_sequence_lookup_set.rs  eytzinger_search_set.rs  hash_set.rs  iterators.rs  mod.rs  ordered_scan_set.rs  scan_set.rs  set_tests.rs  sparse_scalar_lookup_set.rs  sparse_sequence_lookup_set.rs
frozen-collections-core/src/specialized_maps/: common_map.rs  hash_table.rs  integer_map.rs  integer_range_map.rs  iterators.rs  left_slice_map.rs  length_map.rs  mod.rs  right_slice_map.rs  scanning_map.rs  slice_map.rs  utils.rs
frozen-collections-core/src/specialized_sets/: common_set.rs  integer_range_set.rs  integer_set.rs  iterators.rs  left_slice_set.rs  length_set.rs  mod.rs  right_slice_set.rs  scanning_set.rs  slice_set.rs  utils.rs
frozen-collections-core/src/traits/: collection_magnitude.rs  hasher.rs  len.rs  map.rs  map_extras.rs  map_iteration.rs  map_iterator.rs  map_query.rs  map_trait_tests.rs  mod.rs  range_hash.rs  scalar.rs  sequence.rs  set.rs  set_extras.rs  set_iteration.rs  set_iterator.rs  set_ops.rs  set_query.rs  set_trait_tests.rs
frozen-collections-core/src/utils/: mod.rs  (+7 more)
frozen-collections-macros/: Cargo.toml  README.md
frozen-collections-macros/src/: lib.rs
frozen-collections/benches/: hashed_keys.rs  ordered_keys.rs  perfect_hashing.rs  perfect_hashing.rs.keep  scalar_keys.rs  string_keys.rs
frozen-collections/src/: frozen_int_map.rs  frozen_int_set.rs  frozen_map.rs  frozen_map_tests.rs  frozen_set.rs  frozen_set_tests.rs  frozen_string_map.rs  frozen_string_set.rs  lib.rs
frozen-collections/tests/: derive_scalar_macro_tests.rs  hash_macro_tests.rs  omni_tests.rs  ordered_macro_tests.rs  scalar_macro_tests.rs  string_macro_tests.rs
srcgen/: Cargo.toml  README.md  build.rs
srcgen/includes/: make_collections.rs
srcgen/tests/: build_script_test.rs
(+43 files in other folders)
