[workspace]
resolver = "3"
members = [
    "frozen-collections",
    "frozen-collections-core",
    "frozen-collections-macros",
    "codegen",
    "srcgen"
]

[workspace.package]
version = "0.5.0"
edition = "2024"
categories = ["data-structures", "no-std"]
keywords = ["map", "set", "collection"]
repository = "https://github.com/geeknoid/frozen-collections"
license = "MIT"
authors = ["Martin Taillefer <martin@taillefer.org>"]
readme = "README.md"
rust-version = "1.86.0"

[workspace.dependencies]
frozen-collections = { path = "frozen-collections", default-features = false }
frozen-collections-core = { path = "frozen-collections-core", default-features = false }
frozen-collections-macros = { path = "frozen-collections-macros", default-features = false }

const-random = "0.1.18"
criterion = "0.6.0"
equivalent = "1.0.2"
foldhash = { version = "0.1.5", default-features = false }
hashbrown = { version = "0.15.3", default-features = false }
mutants = "0.0.3"
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0.95"
quote = "1.0.40"
rand = "0.9.1"
rand_chacha = "0.9.0"
serde = { version = "1.0.219", default-features = false }
serde_json = "1.0.140"
syn = { version = "2.0.101", default-features = false }

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
#redundant_imports = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_results = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

# turn off annoying ones...
too_many_lines = "allow"
from-iter-instead-of-collect = "allow"
into_iter_without_iter = "allow"
inline_always = "allow"
cognitive_complexity = "allow"

[profile.bench]
codegen-units = 1
lto = "fat"

[profile.release]
codegen-units = 1
lto = "fat"
debug = true
strip = "none"
