[workspace]
resolver = "3"
members = [
    "frozen-collections",
    "frozen-collections-core",
    "frozen-collections-macros",
    "codegen",
    "srcgen"
]

[workspace.package]
version = "0.6.0"
edition = "2024"
categories = ["data-structures", "no-std"]
keywords = ["map", "set", "collection"]
repository = "https://github.com/geeknoid/frozen-collections"
license = "MIT"
authors = ["Martin Taillefer <martin@taillefer.org>"]
readme = "README.md"
rust-version = "1.87.0"

[workspace.dependencies]
frozen-collections = { path = "frozen-collections", default-features = false }
frozen-collections-core = { path = "frozen-collections-core", default-features = false }
frozen-collections-macros = { path = "frozen-collections-macros", default-features = false }

const-random = "0.1.18"
criterion = "0.6.0"
equivalent = "1.0.2"
foldhash = { version = "0.1.5", default-features = false }
hashbrown = { version = "0.15.3", default-features = false }
mutants = "0.0.3"
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0.95"
quote = "1.0.40"
rand = "0.9.1"
rand_chacha = "0.9.0"
serde = { version = "1.0.219", default-features = false }
serde_json = "1.0.140"
syn = { version = "2.0.101", default-features = false }

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_results = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

# Explicitly enabled lints from the `restriction` group.
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
multiple_unsafe_ops_per_block = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
string_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

# turn off annoying ones...
too_many_lines = "allow"
from-iter-instead-of-collect = "allow"
into_iter_without_iter = "allow"
inline_always = "allow"
cognitive_complexity = "allow"

[profile.bench]
codegen-units = 1
lto = "fat"

[profile.release]
codegen-units = 1
lto = "fat"
debug = true
strip = "none"
