[package]
name = "codegen"
version = "0.0.0"
publish = false
edition.workspace = true
rust-version.workspace = true

[dev-dependencies]
frozen-collections = { path = "../frozen-collections", features = ["macros"], default-features = false }
foldhash = "0.1.4"
hashbrown = "0.15.2"

[lints]
workspace = true
