[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead, and delete the **path**.
[dev-dependencies]
frozen-collections = { path = "../frozen-collections" }
ahash = "0.8.11"

[[example]]
name = "frozen_map"
path = "frozen_map.rs"

[[example]]
name = "frozen_set"
path = "frozen_set.rs"

[lints]
workspace = true
