[package]
name = "frozen-collections-macros"
description = "Macros to support frozen collections"
readme = "README.md"
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
resolver = "2"

[lib]
name = "frozen_collections_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
frozen-collections-core = { version = "0.3.0", path = "../frozen-collections-core", features = ["macros"], default-features = false }

[lints]
workspace = true
