[package]
name = "frozen-collections-macros"
description = "Macros to support frozen collections"
readme = "README.md"
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "frozen_collections_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro-error2 = { workspace = true }
frozen-collections-core = { workspace = true, features = ["macros"] }

[lints]
workspace = true
