[package]
name = "frozen-collections"
description = "Fast partially-immutable collections."
readme.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
resolver = "2"

[dependencies]
foldhash = { version = "0.1.4", default-features = false }
frozen-collections-macros = { version = "0.3.0", path = "../frozen-collections-macros", optional = true }
frozen-collections-core = { version = "0.3.0", path = "../frozen-collections-core", default-features = false }

[dev-dependencies]
rand = "0.9.0-beta.1"
quote = "1.0.38"
hashbrown = { version = "0.15.2", features = ["serde"] }
criterion = "0.5.1"
boomphf = "0.6.0"
ph = "0.8.5"
frozen-collections-core = { version = "0.3.0", path = "../frozen-collections-core" }
serde = "1.0.217"
serde_json = "1.0.134"

[build-dependencies]
foldhash = { version = "0.1.4", default-features = false }
rand = "0.9.0-beta.1"

[[bench]]
name = "hashed_keys"
harness = false

[[bench]]
name = "ordered_keys"
harness = false

[[bench]]
name = "scalar_keys"
harness = false

[[bench]]
name = "string_keys"
harness = false

[lints]
workspace = true

[features]
default = ["std", "macros", "serde", "emit"]
serde = ["frozen-collections-core/serde"]
std = ["frozen-collections-core/std"]
macros = ["frozen-collections-macros", "frozen-collections-core/macros"]
emit = ["frozen-collections-core/emit"]
