[package]
name = "srcgen"
version = "0.0.0"
publish = false
edition.workspace = true
rust-version.workspace = true

[dev-dependencies]
frozen-collections = { path = "../frozen-collections", features = ["emit"], default-features = false }
syn = "2.0.100"
proc-macro2 = "1.0.94"

[build-dependencies]
frozen-collections = { path = "../frozen-collections", features = ["emit"], default-features = false }
syn = "2.0.100"
proc-macro2 = "1.0.94"

[lints]
workspace = true
